@@ -52,13 +52,19 @@ public class UserDbStorage implements UserStorage {
     public User getUser(long id) {
         String sql = "SELECT * FROM users WHERE user_id = ?";
         List<User> users = jdbcTemplate.query(sql, new UserMapper(), id);
-        return users.isEmpty() ? null : users.get(0);
+        if (users.isEmpty()) return null;
+        User user = users.getFirst();
+        loadAllFriends(user);
+        return user;
     }
 
     @Override
     public Map<Long, User> getUsers() {
         String sql = "SELECT * FROM users";
         List<User> users = jdbcTemplate.query(sql, new UserMapper());
+        for (User u : users) {
+            loadAllFriends(u);
+        }
         return users.stream().collect(Collectors.toMap(User::getId, u -> u));
     }
 
@@ -86,17 +92,7 @@ public class UserDbStorage implements UserStorage {
         String checkSql = "SELECT COUNT(*) FROM user_friendships WHERE user_id = ? AND friend_id = ?";
         Integer count = jdbcTemplate.queryForObject(checkSql, Integer.class, userId, friendId);
 
-        if (count != null && count > 0) {
-            return;
-        }
-
-        count = jdbcTemplate.queryForObject(checkSql, Integer.class, friendId, userId);
-
-        if (count != null && count > 0) {
-            String updateSql = "UPDATE user_friendships SET confirmed = TRUE WHERE user_id = ? AND friend_id = ?";
-            jdbcTemplate.update(updateSql, friendId, userId);
-            jdbcTemplate.update(updateSql, userId, friendId);
-        } else {
+        if (count <= 0) {
             String insertSql = "INSERT INTO user_friendships (user_id, friend_id, confirmed) VALUES (?, ?, FALSE)";
             jdbcTemplate.update(insertSql, userId, friendId);
         }
@@ -104,23 +100,18 @@ public class UserDbStorage implements UserStorage {
 
     @Override
     public void deleteFriend(Long userId, Long friendId) {
-        String deleteSql = "DELETE FROM user_friendships WHERE (user_id = ? AND friend_id = ?)" +
-                "OR (user_id = ? AND friend_id = ?)";
-        jdbcTemplate.update(deleteSql, userId, friendId, friendId, userId);
+        String deleteSql = "DELETE FROM user_friendships WHERE (user_id = ? AND friend_id = ?)";
+        jdbcTemplate.update(deleteSql, userId, friendId);
     }
 
     private void loadAllFriends(User user) {
         user.getFriends().clear();
-        String sql = "SELECT user_id, friend_id, confirmed FROM user_friendships WHERE user_id = ? OR friend_id = ?";
 
-        jdbcTemplate.query(sql, rs -> {
-            Long userId = rs.getLong("user_id");
-            Long friendId = rs.getLong("friend_id");
-            boolean confirmed = rs.getBoolean("confirmed");
+        String sql = "SELECT friend_id FROM user_friendships WHERE user_id = ?";
+        List<Long> friendIds = jdbcTemplate.queryForList(sql, Long.class, user.getId());
 
-            Long otherId = userId.equals(user.getId()) ? friendId : userId;
-
-            user.getFriends().put(otherId, confirmed ? FriendshipStatus.CONFIRMED : FriendshipStatus.UNCONFIRMED);
-        }, user.getId(), user.getId());
+        for (Long fid : friendIds) {
+            user.getFriends().put(fid, FriendshipStatus.CONFIRMED);
+        }
     }
 }
